--- a/templates/warehousing/admin/content/supplies.html
+++ b/templates/warehousing/admin/content/supplies.html
@@ -16,23 +16,16 @@
                 <!-- Breadcrumb -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-                        <li class="breadcrumb-item active">Supplies</li>
-                        <li class="breadcrumb-item"><a href="#">Supply Categories</a></li>
-                        <li class="breadcrumb-item"><a href="#">Inventories</a></li>
-                        <li class="breadcrumb-item"><a href="#">Inventory Location</a></li>
-                        <li class="breadcrumb-item"><a href="#">Request</a></li>
-                        <li class="breadcrumb-item"><a href="#">Outbound</a></li>
-                        <li class="breadcrumb-item"><a href="#">Inbound</a></li>
-                        <li class="breadcrumb-item"><a href="#">Suppliers</a></li>
-                        <li class="breadcrumb-item"><a href="#">Warehouses</a></li>
-                        <li class="breadcrumb-item"><a href="#">Hospital Departments</a></li>
-                        <li class="breadcrumb-item"><a href="#">Users</a></li>
-                        <li class="breadcrumb-item"><a href="#">Employees</a></li>  
+                        <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
+                        <li>&nbsp; / &nbsp;</li>
+                        <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
+                        <li class="breadcrumb-item" id ="supplies_nav">Supplies</li>
+                        <script>if(window.location.pathname == '/warehousing/admin/supplies/'){document.getElementById("supplies_nav").classList.add('active')}</script>
                     </ol>
                 </div>
                 <!-- / breadcrumb -->
             </div>
+            <br>
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
@@ -81,16 +74,16 @@
                             <table id="data-table" class="table table-bordered table-hover">
                                 <thead>
                                     <tr>
-                                        <th>Supply Name</th>
-                                        <th>Category</th>
-                                        <th>Supplier</th>  
-                                        <th>Qty.</th>
-                                        <th>Unit Type</th>
-                                        <th>Unit Cost</th>
-                                        <th>Description</th>
-                                        <th>Reorder Interval</th>
-                                        <th>Expiration Date</th>
-                                        <th>Actions</th>
+                                        <th width="10%">Supply Name</th>
+                                        <th width="10%">Category</th>
+                                        <th width="10%">Supplier</th>  
+                                        <th width="5%">Qty.</th>
+                                        <th width="5%">Unit Type</th>
+                                        <th width="10%">Unit Cost</th>
+                                        <th width="10%">Description</th>
+                                        <th width="5%">Reorder Interval</th>
+                                        <th width="10%">Expiration Date</th>
+                                        <th width="25%" class="text-center">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
