--- a/templates/warehousing/admin/content/supply_categories.html
+++ b/templates/warehousing/admin/content/supply_categories.html
@@ -15,23 +15,16 @@
                 <!-- Breadcrumb -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
-                        <li class="breadcrumb-item"><a href="#">Supplies</a></li>
-                        <li class="breadcrumb-item active">Supply Categories</li>
-                        <li class="breadcrumb-item"><a href="#">Inventories</a></li>
-                        <li class="breadcrumb-item"><a href="#">Inventory Location</a></li>
-                        <li class="breadcrumb-item"><a href="#">Request</a></li>
-                        <li class="breadcrumb-item"><a href="#">Outbound</a></li>
-                        <li class="breadcrumb-item"><a href="#">Inbound</a></li>
-                        <li class="breadcrumb-item"><a href="#">Suppliers</a></li>
-                        <li class="breadcrumb-item"><a href="#">Warehouses</a></li>
-                        <li class="breadcrumb-item"><a href="#">Hospital Departments</a></li>
-                        <li class="breadcrumb-item"><a href="#">Users</a></li>
-                        <li class="breadcrumb-item"><a href="#">Employees</a></li>  
+                        <li class="breadcrumb-item " id ="dashboard_nav"><a href="/warehousing/admin/dashboard">Home </a></li>
+                        <li>&nbsp; / &nbsp;</li>
+                        <script>if(window.location.pathname == '/warehousing/admin/dashboard/'){document.getElementById("dashboard_nav").classList.add('active')}</script>
+                        <li class="breadcrumb-item" id ="supply_categories_nav">Supply Categories</li>
+                        <script>if(window.location.pathname == '/warehousing/admin/supply_categories/'){document.getElementById("supply_categories_nav").classList.add('active')}</script>
                     </ol>
                 </div>
                 <!-- / breadcrumb -->
             </div>
+            <br>
             <div class="row">     
                 <!-- Button -->
                 <div class="col-sm-6">
@@ -80,10 +73,10 @@
                             <table id="data-table" class="table table-bordered table-hover" cellspacing="0" style="width:100%;">
                                 <thead>
                                     <tr>
-                                        <th>Supply Category Name</th>
-                                        <th>Suppy Category Description</th>
-                                        <th>Date Created</th>
-                                        <th>Actions</th>
+                                        <th width="25%">Supply Category Name</th>
+                                        <th width="25%">Suppy Category Description</th>
+                                        <th width="25%">Date Created</th>
+                                        <th width="25%" class="text-center">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
