--- a/templates/warehousing/manager/content/dashboard.html
+++ b/templates/warehousing/manager/content/dashboard.html
@@ -16,7 +16,19 @@
                 <!-- Breadcrumb -->
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item active">Home</li>            
+                        <li class="breadcrumb-item active">Dashboard</li>
+                        <li class="breadcrumb-item"><a href="#">Supplies</a></li>
+                        <li class="breadcrumb-item"><a href="#">Supply Categories</a></li>
+                        <li class="breadcrumb-item"><a href="#">Inventories</a></li>
+                        <li class="breadcrumb-item"><a href="#">Inventory Location</a></li>
+                        <li class="breadcrumb-item"><a href="#">Request</a></li>
+                        <li class="breadcrumb-item"><a href="#">Outbound</a></li>
+                        <li class="breadcrumb-item"><a href="#">Inbound</a></li>
+                        <li class="breadcrumb-item"><a href="#">Suppliers</a></li>
+                        <li class="breadcrumb-item"><a href="#">Warehouses</a></li>
+                        <li class="breadcrumb-item"><a href="#">Hospital Departments</a></li>
+                        <li class="breadcrumb-item"><a href="#">Users</a></li>
+                        <li class="breadcrumb-item"><a href="#">Employees</a></li>             
                     </ol>
                 </div>
                 <!-- / breadcrumb -->
