--- a/templates/warehousing/manager/default/base.html
+++ b/templates/warehousing/manager/default/base.html
@@ -51,9 +51,9 @@
 <div class="wrapper">
 
   <!-- Preloader -->
-    <!-- <div class="preloader flex-column justify-content-center align-items-center">
+    <div class="preloader flex-column justify-content-center align-items-center">
         <img class="animation__shake" src="{{url_for('static', path='/dist/img/AdminLTELogo.png')}}" alt="AdminLTELogo" height="60" width="60">
-    </div> -->
+    </div>
   
   <!-- Top Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -440,5 +440,4 @@
 {%endblock%}
 
 </body>
-
 </html>
